# DaddyX

./: README.md
escrow/: Cargo.toml
escrow/src/: lib.rs
landing/: .env.example  index.html  package.json  vite.config.ts
landing/src/: App.tsx  index.css
nft-receipt/: Cargo.toml
nft-receipt/src/: lib.rs
