[package]
name = "ticketdaddy-escrow"
version = "0.1.0"
description = "TicketDaddy Multi-Token Escrow Program for Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/ticketdaddy/ticketdaddy"
readme = "README.md"
keywords = ["solana", "escrow", "ticketing", "payments", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketdaddy_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"
tokio = { version = "1.36", features = ["full"] }
